# condorcet

./: LICENSE  condorcet.cabal
app/: Demo.hs
src/: Condorcet.hs
