name:                condorcet
version:             0.0.2
stability:           Experimental
category:            Data
synopsis:            Library for Condorcet voting
description:         This is a small library for determining the winner of a Condorcet election;
                     for what a Condorcet election is, see <https://secure.wikimedia.org/wikipedia/en/wiki/Condorcet_method>
license:             BSD3
license-file:        LICENSE
author:              Evan Martin
maintainer:          Evan Martin <martine@danga.com>
homepage:            http://neugierig.org/software/darcs/condorcet
cabal-version:       >=1.10
build-type:          Simple

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , array
  exposed-modules:     Condorcet
  ghc-options:         -O2 -Wall -optl-Wl,-s
  default-language:    Haskell2010

executable condorcet-demo
  hs-source-dirs:      app
  main-is:             Demo.hs
  build-depends:       base >= 4.7 && < 5
                     , condorcet
                     , parsec
                     , mtl
  default-language:    Haskell2010
